@@ -1,3 +1,6 @@
+2005-06-16  Tristan Tarrant <nadir@users.sourceforge.net>
+	* files/rwregress.cc: removed use of deprecated strstream and used sstream instead
+
 2005-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* audio/Midi.cc: fix crash on exit when midi is disabled
 	* data/bg/faces.shp: new Julia face by Berty Zhang
